# mycelia

./: .gitignore  CLAUDE.md  Cargo.toml  spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: IMPLEMENTATION_PROTOCOL.md
docs/tickets/: 001-camera-system.md  002-game-state-machine.md  003-input-handling-system.md  004-core-node-spawning.md  005-tendril-data-structure.md  006-tendril-rendering.md  007-nutrient-resource-system.md  008-debug-overlay-system.md  019-growth-tip-selection-and-control.md
src/: lib.rs  main.rs
src/game/: mod.rs
src/game/camera/: components.rs  mod.rs  systems.rs
src/game/combat/: mod.rs
src/game/debug/: components.rs  mod.rs  resources.rs  systems.rs
src/game/enemies/: mod.rs
src/game/input/: mod.rs  resources.rs  systems.rs
src/game/map/: mod.rs
src/game/network/: components.rs  core_node.rs  graph.rs  growth.rs  mod.rs  rendering.rs  resources.rs  systems.rs  test_utils.rs
src/game/progression/: events.rs  mod.rs  resources.rs  systems.rs
src/game/state/: components.rs  mod.rs  systems.rs
src/game/ui/: mod.rs
